[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-exporter-py"
description = "Prometheus Exporter for Redis metrics (Python version)"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
]
keywords = ["redis", "prometheus", "exporter", "metrics", "monitoring"]
authors = [
    {name = "vpuhoff"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
redis-exporter-py = "main:main"

[project.urls]
Homepage = "https://github.com/vpuhoff/redis-exporter"
Documentation = "https://github.com/vpuhoff/redis-exporter"
Repository = "https://github.com/vpuhoff/redis-exporter"
Issues = "https://github.com/vpuhoff/redis-exporter/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "fakeredis>=2.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=exporter --cov-report=html --cov-report=term-missing"
markers = [
    "unit: Unit tests with mocks",
    "integration: Integration tests requiring Redis",
]

[tool.setuptools]
packages = ["exporter"]

[tool.setuptools_scm]
write_to = "exporter/_version.py"

